--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "teddy-store",
-  "version": "0.1.0",
+  "version": "0.1.0",  
+  "proxy": "http://localhost:7070",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "cloudinary": "^2.0.1",
     "cloudinary-react": "^1.8.1",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
