--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "teddy-store",
-  "version": "0.1.0",  
+  "version": "0.1.0",
   "proxy": "http://localhost:7070",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.15.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "cloudinary": "^2.0.1",
@@ -17,8 +19,8 @@
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
-    "sweetalert2": "^11.10.4",
+    "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.6.13",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.21"
   },
