--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teddy-store",
-  "version": "0.1.0",  
+  "version": "0.1.0",
   "proxy": "http://localhost:7070",
   "private": true,
   "dependencies": {
@@ -18,6 +18,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.21"
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^1.7.0",
     "react-router-dom": "^6.22.0"
   }
 }
