feature: cart & checkout

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "proxy": "http://localhost:7070",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.15.3",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "cloudinary": "^2.0.1",
@@ -17,6 +22,9 @@
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-charts": "^4.0.1",
+    "react-modal": "^3.16.1",
     "react-scripts": "^3.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
