management customer, rate banner

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.0",
+    "antd-img-crop": "^4.21.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "cloudinary": "^2.0.1",
